--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,13 +20,14 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
-- task: CopyFiles@2
-  inputs:
-    SourceFolder: '$(agent.builddirectory)'
-    Contents: '**/.war'
-    TargetFolder: '$(build.artifactstagingdirectory)'
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'Artifact_01'
-    publishLocation: 'Container'
+
+# - task: CopyFiles@2
+#   inputs:
+#     SourceFolder: '$(agent.builddirectory)'
+#     Contents: '**/.war'
+#     TargetFolder: '$(build.artifactstagingdirectory)'
+# - task: PublishBuildArtifacts@1
+#   inputs:
+#     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+#     ArtifactName: 'Artifact_01'
+#     publishLocation: 'Container'
