Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,11 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+
+# - task: GitHubComment@0
+#   inputs:
+#     gitHubConnection: 'GitHub'
+#     repositoryName: 'anupagarw/DevopsBasics'
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
