Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ variables:
 resources:
  pipelines:
  -  pipeline: "BuildPipelineOld"
+    source: https://dev.azure.com/AnupAgarwal1/DevOps_Project_01/_apps/hub/ms.vss-build-web.ci-designer-hub?pipelineId=2&branch=main
 
 pool:
   vmImage: ubuntu-latest
